# coding-challenge-maximilian-rosen

./: .env.example  .gitignore  Dockerfile  Dockerfile_poetry  README.md  docker-compose.yml  files.json  pyproject.toml  requirements.txt
app/: config.py
app/adapters/llm/: openai_client.py
app/adapters/vectorstore/: faiss_retriever.py
app/core/interfaces/: llm_client.py  retriever.py
app/core/models/: answer.py  document.py  document_chunk.py  query.py
app/entrypoints/: cli.py
app/services/: chunking_service.py  document_loader.py  embedding_service.py  gdrive_loader.py  local_pdf_loader.py  query_service.py  retrieval_service.py
tests/services/: test_document_loader.py  test_embedding_service.py  test_query_service.py
